--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "styled-components": "^3.1.6"
   },
   "scripts": {
-    "start": "react-app-env start",
-    "build": "react-app-env build",
-    "test": "react-app-env test --env=jsdom",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "devDependencies": {
