--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-copy-to-clipboard": "^5.0.1",
     "react-dom": "^16.2.0",
     "react-icons": "^2.2.7",
+    "react-promise": "^2.0.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.0",
     "react-styled-flexboxgrid": "^2.2.0",
